--- a/loginAndRegister/Base.lproj/Main.storyboard
+++ b/loginAndRegister/Base.lproj/Main.storyboard
@@ -186,7 +186,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </searchBar>
             </objects>
-            <point key="canvasLocation" x="3054" y="-672"/>
+            <point key="canvasLocation" x="1899" y="-964"/>
         </scene>
         <!--Product Details View Controller-->
         <scene sceneID="7rv-3a-8gb">
@@ -1150,7 +1150,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eAN-8z-Rue" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2102" y="-671"/>
+            <point key="canvasLocation" x="949" y="-963"/>
         </scene>
         <!--Product-->
         <scene sceneID="Mtt-Fm-l2b">
@@ -1369,8 +1369,8 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="pmp-XN-87m"/>
-        <segue reference="RSg-Tb-hi5"/>
-        <segue reference="7V4-Pz-Lgj"/>
+        <segue reference="df1-hp-IYa"/>
+        <segue reference="PUX-Zt-Bnm"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
 </document>
